--- a/public/zhopa.css
+++ b/public/zhopa.css
@@ -163,7 +163,13 @@ canvas {
 }
 
 .card-oppo {
-  width: 75px;
-  height: 100px;
+  width: 95px;
+  height: 120px;
+  border: none;
+}
+
+.mycard {
+  width: 95px;
+  height: 120px;
   border: none;
 }
