--- a/public/settings.css
+++ b/public/settings.css
@@ -42,3 +42,22 @@
     cursor: pointer;
     margin-top: 20px;
 }
+
+#arrayOfAvatars {
+    display: flex;
+    width: 150%;
+    margin-left: -25%;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+#arrayOfAvatars img {
+    width: 56px;
+    height: 57px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+.selectedAvatar {
+    border: 4px solid #a257f8;
+}
