--- a/views/chat.html
+++ b/views/chat.html
@@ -94,7 +94,7 @@
         mycards = deck;
     // Відображення ваших карт
         deck.forEach(card => {
-          const cardElement = document.createElement('div');
+          const cardElement = document.createElement('img');
           cardElement.classList.add('card');
           cardElement.classList.add('mycard');
           cardElement.setAttribute('id', `${card.id}`);
