--- a/views/chat.html
+++ b/views/chat.html
@@ -94,12 +94,11 @@
         mycards = deck;
     // Відображення ваших карт
         deck.forEach(card => {
-          const cardElement = document.createElement('img');
+          const cardElement = document.createElement('div');
           cardElement.classList.add('card');
           cardElement.classList.add('mycard');
           cardElement.setAttribute('id', `${card.id}`);
-          cardElement.src = `card${card.id}.png`;
-          //cardElement.textContent = `Attack: ${card.attack} Defense: ${card.defense} Coins: ${card.coins}`;
+          cardElement.textContent = `Attack: ${card.attack} Defense: ${card.defense} Coins: ${card.coins}`;
           cardElement.onclick = () => {
             socket.emit('card-selected', card.id);
             socket.emit('your-card-selected', card.id);
@@ -111,9 +110,8 @@
 
     // Створення 10 "закритих" карток для опонента
     for (let i = 0; i < 10; i++) {
-        const cardBackElement = document.createElement('img');
-        cardBackElement.src = 'back_card.png';
-        cardBackElement.classList.add('card', 'card-back', 'card-oppo');
+        const cardBackElement = document.createElement('div');
+        cardBackElement.classList.add('card', 'card-back');
         opponentCards.appendChild(cardBackElement);
     }
 });
@@ -132,13 +130,9 @@ socket.on('opponent-info', (data) => {
 socket.on('your-card-selected', (cardId) => {  
     const centerArea = document.getElementById('game-table');
     const cardData = mycards.find(card => card.id == cardId); 
-    
-  //const cardElement = document.createElement('div');
-    const cardElement = document.createElement('img');
+    const cardElement = document.createElement('div');
     cardElement.classList.add('card');
-      //cardElement.textContent = `Attack: ${cardData.attack} Defense: ${cardData.defense} Coins ${cardData.coins}`; 
-    cardElement.src = `card${cardId}.png`;
-    //cardElement.textContent = `Attack: ${cardData.attack} Defense: ${cardData.defense} Coins ${cardData.coins}`; 
+    cardElement.textContent = `Attack: ${cardData.attack} Defense: ${cardData.defense} Coins ${cardData.coins}`; 
     let displayCoins = document.getElementById('coins-display');
     userCoins -= cardData.coins;
     displayCoins.textContent =  "Монетки: " + userCoins;
