--- a/views/settings.html
+++ b/views/settings.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="home.css">
     <link rel="stylesheet" type="text/css" href="signIn.css">
     <link rel="stylesheet" type="text/css" href="settings.css">
+    <link rel="icon" href="logo.png">
     <script src="https://kit.fontawesome.com/63fb3be0e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
