--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="logo.png">
 </head>
 
 <body>
