--- a/views/reminder.html
+++ b/views/reminder.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="signIn.css">
   <link rel="stylesheet" href="reminder.css">
+  <link rel="icon" href="logo.png">
   <script src="https://kit.fontawesome.com/63fb3be0e9.js" crossorigin="anonymous"></script>
 
 </head>
