--- a/views/signIn.html
+++ b/views/signIn.html
@@ -6,6 +6,8 @@
     <title>The Name Game</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="signIn.css">
+    <link rel="icon" href="logo.png">
+    <link rel="icon" href="logo.png">
     <script src="https://kit.fontawesome.com/63fb3be0e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
