--- a/views/stats.html
+++ b/views/stats.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="home.css">
     <link rel="stylesheet" type="text/css" href="stats.css">
+    <link rel="icon" href="logo.png">
     <script src="https://kit.fontawesome.com/63fb3be0e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
