Made js files for html

--- a/views/home.html
+++ b/views/home.html
@@ -46,29 +46,6 @@
         <p>© Duderick and DarunKa company limited.AM</p>
     </footer>
 </body>
-<script>
-    function showUserInfo () {
-        document.getElementById("userInfo").style.display='flex';
-    }
 
-    function hideUserInfo () {
-        document.getElementById("userInfo").style.display='none';
-    }
-
-    let userLogin = document.querySelector('.loginText').innerText;
-    console.log(userLogin);
-    localStorage.setItem('userLogin', userLogin);
-
-    function logOut() {
-        localStorage.clear();
-        window.location.assign('/logout');
-    }
-
-    let isExit = localStorage.getItem('isExit');
-    if (isExit == 'true') {  
-        localStorage.removeItem('isExit');
-        window.location.href = '/lose-page';
-        alert('Ви програли.');
-    }
-</script>
+<script src="home.js"></script>
 </html>
