--- a/views/chat.html
+++ b/views/chat.html
@@ -21,8 +21,8 @@
     <div id="game-board">
       <div class="health-info">
         <div id="coins-display"></div>
-        <div>Здоров'я гравця </div><div id="player-health">20</div>
-        <div>Здоров'я опонента </div><div id="opponent-health">20</div>
+        <div id="my-health">Здоров'я гравця <div id="player-health">20</div></div>
+        <div id="opp-health">Здоров'я опонента <div id="opponent-health">20</div></div>
       </div>
       <div id="opponent-cards" class="card-row">
           <!-- Тут будуть карти опонента (тильний бік) -->
