--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Registration</title>
+  <title>Press to play!</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="index.css">
