--- a/public/zhopa.css
+++ b/public/zhopa.css
@@ -178,3 +178,68 @@ canvas {
   height: 158px;
   border: none;
 }
+
+#coins-display {
+  position: absolute;
+  left: 20px;
+  top: 60%;
+}
+
+#my-health {
+  position: absolute;
+  left: 20px;
+  top: 55%;
+}
+
+#opp-health {
+  position: absolute;
+  left: 20px;
+  top: 42%;
+}
+
+#chat-room {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  right: 20px;
+  top: 57%;
+  width: 12%;
+}
+
+#chat-messages {
+  height: 300px;
+}
+
+input {
+  line-height: 32px;
+  font-size: 16px;
+  margin-top: 8px;
+  margin-bottom: 10px;
+  outline: none;
+  padding-left: 10px;
+  border: 1px solid #cb9dff;
+  border-radius: 1rem;
+  color: #a257f8;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #cb9dff; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a257f8;
+}
