--- a/views/signIn.html
+++ b/views/signIn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Name Game</title>
+    <title>Scooby</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="signIn.css">
     <link rel="icon" href="logo.png">
