Fixed button music

--- a/views/home.html
+++ b/views/home.html
@@ -33,7 +33,7 @@
     <div class="mainSection menuSection">
         <h4>The Name Game</h4>
         <div class="home-menu">
-            <button onclick=stopMusic() type="submit" class="statBtn"><i id="volume" class="fa-solid fa-volume-off"></i>
+            <button onclick=stopMusic() type="submit" id="btnvolume" class="audioBtn"><i id="volume" class="fa-solid fa-volume-low"></i></button>
             <button onclick="window.location.assign('/stats')" type="submit" class="statBtn"><i class="fa-solid fa-chart-line"></i></button>
             <button onclick="window.location.assign('/settings')" type="submit" class="settingBtn"><i class="fa-solid fa-gear"></i></button>
             <u onclick="showUserInfo()">#avatar2#</u>
