--- a/public/zhopa.css
+++ b/public/zhopa.css
@@ -138,7 +138,7 @@ canvas {
 #turn-info {
   position: fixed; 
   left: 0; 
-  top: 50%; 
+  top: 45%; 
   transform: translateY(-50%); 
   background-color: #f1f1f1;
   padding: 10px; 
@@ -146,7 +146,7 @@ canvas {
 }
 
 .disabled-card {
-  opacity: 0.6;
+  /* opacity: 0.6; */
   pointer-events: none; 
 }
 
@@ -185,16 +185,28 @@ canvas {
   top: 60%;
 }
 
-#my-health {
+.my-health {
   position: absolute;
   left: 20px;
-  top: 55%;
+  top: 57%;
 }
 
-#opp-health {
+.my-avatar {
+  position: absolute;
+  left: 35px;
+  top: 49%;
+}
+
+.opp-health {
   position: absolute;
   left: 20px;
-  top: 42%;
+  top: 38%;
+}
+
+.opp-avatar {
+  position: absolute;
+  left: 35px;
+  top: 30%;
 }
 
 #chat-room {
@@ -242,4 +254,30 @@ input {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #a257f8;
+}
+
+
+#draw-button {
+  position: absolute;
+  bottom: 200px;
+  left: 30px;
+  cursor: pointer;
+  border-radius: 50px;
+}
+
+#draw-button i {
+  margin: 20px 0;
+}
+
+
+#draw-button:hover .fa-flag{
+  transform: scale(1.3);
+  transition-duration: 1s;
+}
+
+.avatarClass {
+  width: 56px;
+  height: 57px;
+  border-radius: 50px;
+  cursor: pointer;
 }
