--- a/public/zhopa.css
+++ b/public/zhopa.css
@@ -81,7 +81,7 @@ canvas {
 }
 
 .my-message {
-  color: red;
+  color:  rgb(255, 77, 119);
 }
 
 .card {
@@ -232,16 +232,17 @@ input {
   border: 1px solid #cb9dff;
   border-radius: 1rem;
   color: #a257f8;
+  width: 80%;
 }
 
 /* width */
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px #cb9dff; 
   border-radius: 10px;
 }
  
@@ -280,4 +281,108 @@ input {
   height: 57px;
   border-radius: 50px;
   cursor: pointer;
+}
+
+
+#chatBtn {
+  position: absolute;
+  top: 48%;
+  right: 40px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+#chatBtn i {
+  margin: 20px 0;
+}
+
+#chatBtn:hover {
+  background-color: #a257f8;
+}
+
+#chatBtn:disabled{
+  background-color: #666666;
+  cursor: not-allowed;
+}
+
+#chatPopup {
+  position: absolute;
+  z-index: 10;
+  height: 400px;
+  width: 400px;
+  top: 10%;
+  right: 35%;
+  background-color: white;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0px 9px 41px 3px rgba(162,87,248,0.7);
+  padding: 20px;
+}
+
+.hiddenChat {
+  display: none!important;
+}
+
+#chatPopupMessages {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 80%;
+}
+
+.messageDiv {
+  width: 100%;
+  word-wrap: break-word;
+  padding-right: 10px;
+}
+
+input::placeholder{
+  color: #a257f8;
+  opacity: 0.5;
+  font-size: 14px;
+}
+
+input:hover{
+  border-color: #a257f8;
+}
+
+input:focus{
+  border-color: #5a006b;
+  color: #5a006b;
+}
+
+input:focus::placeholder {
+  opacity: 0;
+}
+
+.chatBtnActive {
+  background-color: #5a006b;
+}
+
+#chatBtn.chatBtnActive:hover {
+  background-color: #5a006b;
+}
+
+.chatBtnPulse {
+  background-color:  rgb(255, 77, 119);
+  transform: scale(1);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+0% {
+  transform: scale(0.95);
+  box-shadow: 0 0 0 0  rgb(255, 77, 119, 0.7);
+}
+
+70% {
+  transform: scale(1);
+  box-shadow: 0 0 0 10px  rgb(255, 77, 119, 0);
+}
+
+100% {
+  transform: scale(0.95);
+  box-shadow: 0 0 0 0 rgb(255, 77, 119, 0);
+}
 }
