--- a/views/chat.html
+++ b/views/chat.html
@@ -23,10 +23,14 @@
       <div class="health-info">
         <div id="coins-display"></div>
         <!-- Аватра мій -->
-        <div class="my-avatar"></div>
+        <div class="my-avatar"><div id="progress-container1">
+          <div id="progress-bar1"></div>
+      </div></div>
         <div class="my-health" id="player-health"></div>
         <!-- аватар опонента -->
-        <div class="opp-avatar"></div>
+        <div class="opp-avatar"><div id="progress-container2">
+          <div id="progress-bar2"></div>
+      </div></div>
         <div class="opp-health" id="opponent-health"></div>
       </div>
       <div id="opponent-cards" class="card-row">
