--- a/views/chat.html
+++ b/views/chat.html
@@ -17,6 +17,13 @@
         <button onclick="sendPrivateMessage()">Відправити</button>
     </div> -->
 
+    <!-- Повідомлення про пошук -->
+    <div id="searchingModal" class="modal">
+      <div class="modal-content">
+        <p id="modalText">The search for a player is carried out...</p>
+      </div>
+    </div>
+
     <!-- СТІЛ ДЛЯ ГРИ В КАРТИ  -->
 
     <div id="game-board">
