--- a/public/main.css
+++ b/public/main.css
@@ -45,3 +45,34 @@ footer {
     margin-left: auto; 
     margin-right: auto;
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+}
+
+.not-found {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.not-found h1 {
+    font-size: 10em;
+    color: #a257f8;
+    margin: 0;
+}
+
+.not-found h2 {
+    margin-top: 20px;
+}
+
+.not-found a {
+    color: #cb9dff;
+    font-size: 1.5em;
+    text-decoration: none;
+    margin-top: 20px; 
+}
