--- a/public/zhopa.css
+++ b/public/zhopa.css
@@ -281,13 +281,6 @@ input {
   transition-duration: 1s;
 }
 
-.avatarClass {
-  width: 56px;
-  height: 57px;
-  border-radius: 50px;
-  cursor: pointer;
-}
-
 
 #chatBtn {
   position: absolute;
@@ -406,4 +399,38 @@ input:focus::placeholder {
   background-color: #a257f8;
   transition: width 1s linear;
   border-radius: 20px;
+}
+
+.avatarClass {
+  width: 56px;
+  height: 57px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.modal-content {
+  background-color: #a257f8;
+  color: white;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  border-radius: 15px;
+  text-align: center; 
+}
+
+#modalText {
+  font-size: 24px; 
 }
