--- a/views/home.html
+++ b/views/home.html
@@ -39,10 +39,14 @@
             <u onclick="showUserInfo()">#avatar2#</u>
         </div>
     </div>
+    <!-- 2 гравці -->
     <button onclick="window.location.assign('/room_chat')" type="submit" class="startGameBtn"><i class="fa-solid fa-play"></i> Start game</button>
+    <!-- Комп'ютер -->
+    <button onclick="window.location.assign('/scooby_doo')" type="submit" class="startGameBtn"><i class="fa-solid fa-play"></i> Scooby-Doo Game</button>
     <div>
         <button onclick="logOut()" type="submit" class="logOutBtn"><i class="fa-solid fa-right-from-bracket"></i></button>
     </div>
+    
     <audio id="audio" src="Scooby-Doo.mp3" autoplay></audio>
     <footer>
         <p>© Duderick and DarunKa company limited.AM</p>
