Sounds win/lose + timer and name files fixed

--- a/views/computer.html
+++ b/views/computer.html
@@ -3,7 +3,7 @@
   <head>
     <title>card game</title>
     <link rel="icon" href="img/favicon.png">
-    <link rel="stylesheet" href="zhopa.css">
+    <link rel="stylesheet" href="game.css">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="logo.png">
     <script src="https://kit.fontawesome.com/63fb3be0e9.js" crossorigin="anonymous"></script>
@@ -58,6 +58,8 @@
     </div>
 
     <audio id="audioPlayer" src="flipcard.mp3"></audio>
+    <audio id="losePlayer" src="losesound.mp3"></audio>
+    <audio id="winPlayer" src="winsound.mp3"></audio>
     
     <script src="/socket.io/socket.io.js"></script>
     <script src="computer.js"></script>
