Changed main name

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="mainSection">
-  <h1>The Name Game</h1>
+  <h1>Scooby</h1>
   <div class="home-menu">
     <button id="pressPlay" onclick="window.location.assign('/signIn')">Press to play!</button>
   </div>
