--- a/views/signUp.html
+++ b/views/signUp.html
@@ -12,7 +12,7 @@
 <body>
     <form action="/create" method="POST">
     <div class="mainSection">
-        <h2>The Name Game</h2>
+        <h2>Scooby</h2>
         <div class="signForm signUpForm">
             <div id="hidden_if_empty">#error#</div>
             <div class="column">
