--- a/views/stats.html
+++ b/views/stats.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="mainSection menuSection">
-        <h4 onclick="window.location.assign('/home')">The Name Game</h4>
+        <h4 onclick="window.location.assign('/home')">Scooby</h4>
         <div class="home-menu">
             <button onclick="window.location.assign('/home')" type="submit" class="statBtn"><i class="fa-solid fa-xmark"></i></button>
             <button onclick="window.location.assign('/settings')" type="submit" class="settingBtn"><i class="fa-solid fa-gear"></i></button>
