--- a/views/home.html
+++ b/views/home.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="mainSection menuSection">
-        <h4>The Name Game</h4>
+        <h4>Scooby</h4>
         <div class="home-menu">
             <button onclick=stopMusic() type="submit" id="btnvolume" class="audioBtn"><i id="volume" class="fa-solid fa-volume-low"></i></button>
             <button onclick="window.location.assign('/stats')" type="submit" class="statBtn"><i class="fa-solid fa-chart-line"></i></button>
