--- a/views/signIn.html
+++ b/views/signIn.html
@@ -13,7 +13,7 @@
 <body>
     <form action="/signIn" method="post">
     <div class="mainSection">
-        <h2>The Name Game</h2>
+        <h2>Scooby</h2>
         <div class="signForm">
             <div id="hidden_if_empty">#error#</div>
             <div class="loginInput">
