--- a/views/home.html
+++ b/views/home.html
@@ -40,9 +40,9 @@
         </div>
     </div>
     <!-- 2 гравці -->
-    <button onclick="window.location.assign('/room_chat')" type="submit" class="startGameBtn"><i class="fa-solid fa-play"></i> Start game</button>
+    <button onclick="window.location.assign('/room_chat')" type="submit" class="startGameBtn"><i class="fa-solid fa-play"></i> Start ranked game</button>
     <!-- Комп'ютер -->
-    <button onclick="window.location.assign('/scooby_doo')" type="submit" class="startGameBtn"><i class="fa-solid fa-play"></i> Scooby-Doo Game</button>
+    <button onclick="window.location.assign('/scooby_doo')" type="submit" class="startGameBtn gameWithBot"><i class="fa-solid fa-play"></i> Game with bot</button>
     <div>
         <button onclick="logOut()" type="submit" class="logOutBtn"><i class="fa-solid fa-right-from-bracket"></i></button>
     </div>
